--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "date-fns": "^3.0.6",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
